// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PipelineDetailsTab /> tests empty data 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="upcoming"
    >
      <span>
        pipeline.execution.upcomingStagesPrefix
      </span>
      <span>
        none
      </span>
    </div>
    <div
      class="title"
    >
      pipeline.execution.stagesExecuted
    </div>
    <span>
      none
    </span>
  </div>
</div>
`;

exports[`<PipelineDetailsTab /> tests snapshot test 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="upcoming"
    >
      <span>
        pipeline.execution.upcomingStagesPrefix
      </span>
      <span>
        stage_3, stage_4
      </span>
    </div>
    <div
      class="title"
    >
      pipeline.execution.stagesExecuted
    </div>
    <span>
      none
    </span>
  </div>
</div>
`;
